--- a/Aquapalaca/Aquapalaca.csproj
+++ b/Aquapalaca/Aquapalaca.csproj
@@ -101,6 +101,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Abonnement.cs" />
     <Compile Include="Databases.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
