--- a/Aquapalaca/Aquapalaca.csproj
+++ b/Aquapalaca/Aquapalaca.csproj
@@ -102,6 +102,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Abonnement.cs" />
+    <Compile Include="beheerPagina.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="beheerPagina.Designer.cs">
+      <DependentUpon>beheerPagina.cs</DependentUpon>
+    </Compile>
     <Compile Include="Databases.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -116,13 +122,25 @@
     <Compile Include="KlantPagina.Designer.cs">
       <DependentUpon>KlantPagina.cs</DependentUpon>
     </Compile>
+    <Compile Include="medewerkerPagina.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="medewerkerPagina.Designer.cs">
+      <DependentUpon>medewerkerPagina.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="beheerPagina.resx">
+      <DependentUpon>beheerPagina.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="KlantPagina.resx">
       <DependentUpon>KlantPagina.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="medewerkerPagina.resx">
+      <DependentUpon>medewerkerPagina.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
