--- a/Aquapalaca/Aquapalaca.csproj
+++ b/Aquapalaca/Aquapalaca.csproj
@@ -122,6 +122,24 @@
     <Compile Include="KlantPagina.Designer.cs">
       <DependentUpon>KlantPagina.cs</DependentUpon>
     </Compile>
+    <Compile Include="medewerkerAbonnement.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="medewerkerAbonnement.Designer.cs">
+      <DependentUpon>medewerkerAbonnement.cs</DependentUpon>
+    </Compile>
+    <Compile Include="medewerkerInchecken.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="medewerkerInchecken.Designer.cs">
+      <DependentUpon>medewerkerInchecken.cs</DependentUpon>
+    </Compile>
+    <Compile Include="medewerkerKlanten.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="medewerkerKlanten.Designer.cs">
+      <DependentUpon>medewerkerKlanten.cs</DependentUpon>
+    </Compile>
     <Compile Include="medewerkerPagina.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -138,6 +156,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="KlantPagina.resx">
       <DependentUpon>KlantPagina.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="medewerkerAbonnement.resx">
+      <DependentUpon>medewerkerAbonnement.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="medewerkerInchecken.resx">
+      <DependentUpon>medewerkerInchecken.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="medewerkerKlanten.resx">
+      <DependentUpon>medewerkerKlanten.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="medewerkerPagina.resx">
       <DependentUpon>medewerkerPagina.cs</DependentUpon>
