--- a/Aquapalaca/Aquapalaca.csproj
+++ b/Aquapalaca/Aquapalaca.csproj
@@ -178,6 +178,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Rolbeheer.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Rolbeheer.Designer.cs">
+      <DependentUpon>Rolbeheer.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Abonnementsoverzicht.resx">
       <DependentUpon>Abonnementsoverzicht.cs</DependentUpon>
     </EmbeddedResource>
@@ -224,6 +230,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Rolbeheer.resx">
+      <DependentUpon>Rolbeheer.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
