--- a/Aquapalaca/Aquapalaca.csproj
+++ b/Aquapalaca/Aquapalaca.csproj
@@ -168,6 +168,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="medewerkerPagina.resx">
       <DependentUpon>medewerkerPagina.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
