--- a/Aquapalaca/Aquapalaca.csproj
+++ b/Aquapalaca/Aquapalaca.csproj
@@ -122,6 +122,12 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Gebruiker.cs" />
+    <Compile Include="Klantenoverzicht.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Klantenoverzicht.Designer.cs">
+      <DependentUpon>Klantenoverzicht.cs</DependentUpon>
+    </Compile>
     <Compile Include="klantGeschiedenis.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -192,6 +198,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Klantenoverzicht.resx">
+      <DependentUpon>Klantenoverzicht.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="klantGeschiedenis.resx">
       <DependentUpon>klantGeschiedenis.cs</DependentUpon>
