--- a/Aquapalaca/Aquapalaca.csproj
+++ b/Aquapalaca/Aquapalaca.csproj
@@ -195,6 +195,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="beheerPagina.resx">
       <DependentUpon>beheerPagina.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
