--- a/Aquapalaca/Aquapalaca.csproj
+++ b/Aquapalaca/Aquapalaca.csproj
@@ -124,6 +124,12 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Gebruiker.cs" />
+    <Compile Include="GebruikersOverzicht.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GebruikersOverzicht.Designer.cs">
+      <DependentUpon>GebruikersOverzicht.cs</DependentUpon>
+    </Compile>
     <Compile Include="Klanten.cs" />
     <Compile Include="Klantenoverzicht.cs">
       <SubType>Form</SubType>
@@ -209,6 +215,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GebruikersOverzicht.resx">
+      <DependentUpon>GebruikersOverzicht.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Klantenoverzicht.resx">
       <DependentUpon>Klantenoverzicht.cs</DependentUpon>
