--- a/Aquapalaca/Aquapalaca.csproj
+++ b/Aquapalaca/Aquapalaca.csproj
@@ -102,6 +102,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Abonnement.cs" />
+    <Compile Include="AbonnementLogs.cs" />
     <Compile Include="Abonnementsoverzicht.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -115,6 +116,7 @@
     <Compile Include="beheerPagina.Designer.cs">
       <DependentUpon>beheerPagina.cs</DependentUpon>
     </Compile>
+    <Compile Include="Checkin.cs" />
     <Compile Include="Databases.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
